--- a/TSIPortal/StoreFileOnSharedDrive.xaml
+++ b/TSIPortal/StoreFileOnSharedDrive.xaml
@@ -12,10 +12,10 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1150,1854</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1153.33333333333,2029.33333333333</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>StoreFileOnSharePoint_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
-    <scg:List x:TypeArguments="x:String" Capacity="27">
+    <scg:List x:TypeArguments="x:String" Capacity="54">
       <x:String>System.Activities</x:String>
       <x:String>System.Activities.Statements</x:String>
       <x:String>System.Activities.Expressions</x:String>
@@ -43,6 +43,7 @@
       <x:String>System.Collections.ObjectModel</x:String>
       <x:String>System.Activities.DynamicUpdate</x:String>
       <x:String>System.Runtime.Serialization</x:String>
+      <x:String>System.ComponentModel</x:String>
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -76,7 +77,7 @@
       <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="This .xaml file stores required file on shared drive" DisplayName="StoreFileOnSharedDrive" sap:VirtualizedContainerService.HintSize="844.666666666667,1789.33333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="This .xaml file stores required file on shared drive" DisplayName="StoreFileOnSharedDrive" sap:VirtualizedContainerService.HintSize="844.666666666667,1964.66666666667" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="sourceFilePath" />
       <Variable x:TypeArguments="x:Boolean" Name="isSourceFileExists" />
@@ -97,16 +98,16 @@
         <InArgument x:TypeArguments="x:String">[Directory.GetFiles(in_SourceFolderPath,"*.xls*").OrderByDescending(Function(d) New FileInfo(d).CreationTime).ToList(0)]</InArgument>
       </Assign.Value>
     </Assign>
-    <TryCatch DisplayName="Try Catch: Store files on sharepoint" sap:VirtualizedContainerService.HintSize="802.666666666667,1160.66666666667" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+    <TryCatch DisplayName="Try Catch: Store files on sharepoint" sap:VirtualizedContainerService.HintSize="802.666666666667,1336" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <TryCatch.Try>
-        <Sequence DisplayName="Sequence: Check flat file and move it to shared location" sap:VirtualizedContainerService.HintSize="764,922.666666666667" sap2010:WorkflowViewState.IdRef="Sequence_3">
+        <Sequence DisplayName="Sequence: Check flat file and move it to shared location" sap:VirtualizedContainerService.HintSize="764,1098" sap2010:WorkflowViewState.IdRef="Sequence_3">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
           <ui:PathExists Resource="{x:Null}" DisplayName="Path Exists: Source flat file path" Exists="[isSourceFileExists]" sap:VirtualizedContainerService.HintSize="722,90.6666666666667" sap2010:WorkflowViewState.IdRef="PathExists_1" Path="[sourceFilePath]" PathType="File" />
-          <If sap2010:Annotation.AnnotationText="Checks if flat file from TSI portal is downloaded on source folder or not.&#xA;If No, throws an exception" Condition="[isSourceFileExists]" DisplayName="If: Flat file downloaded" sap:VirtualizedContainerService.HintSize="722,700" sap2010:WorkflowViewState.IdRef="If_1">
+          <If sap2010:Annotation.AnnotationText="Checks if flat file from TSI portal is downloaded on source folder or not.&#xA;If No, throws an exception" Condition="[isSourceFileExists]" DisplayName="If: Flat file downloaded" sap:VirtualizedContainerService.HintSize="722,875.333333333333" sap2010:WorkflowViewState.IdRef="If_1">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
@@ -115,12 +116,13 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <If.Then>
-              <Sequence DisplayName="Sequence: Move files to Shared folder" sap:VirtualizedContainerService.HintSize="476,490.666666666667" sap2010:WorkflowViewState.IdRef="Sequence_2">
+              <Sequence DisplayName="Sequence: Move files to Shared folder" sap:VirtualizedContainerService.HintSize="476,666" sap2010:WorkflowViewState.IdRef="Sequence_2">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
+                <ui:KillProcess AppliesTo="{x:Null}" Process="{x:Null}" ContinueOnError="True" DisplayName="Kill Process: Excel" sap:VirtualizedContainerService.HintSize="434,135.333333333333" sap2010:WorkflowViewState.IdRef="KillProcess_1" ProcessName="excel" />
                 <ui:MoveFile ContinueOnError="{x:Null}" DestinationResource="{x:Null}" PathResource="{x:Null}" Destination="[in_DestinationFolderPath]" DisplayName="Move File: Downloaded flat file" sap:VirtualizedContainerService.HintSize="434,162" sap2010:WorkflowViewState.IdRef="MoveFile_2" Overwrite="True" Path="[sourceFilePath]" />
                 <ui:LogMessage DisplayName="Log Message: File is moved to shared folder" sap:VirtualizedContainerService.HintSize="434,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;File is moved to shared folder&quot;]" />
                 <Assign DisplayName="Assign: Out file path" sap:VirtualizedContainerService.HintSize="434,62" sap2010:WorkflowViewState.IdRef="Assign_2">
